<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:selectable="false"
        android:summary="@string/app_author"
        android:title="@string/settings_information_author_title" />

    <Preference
        android:selectable="false"
        android:summary="@string/settings_information_design_summary"
        android:title="@string/settings_information_design_title" />

    <Preference
        android:selectable="false"
        android:summary="@string/settings_information_translator_summary"
        android:title="@string/settings_information_translator_title" />

    <Preference
        android:selectable="false"
        android:summary="@string/app_version"
        android:title="@string/settings_information_version_title" />

    <Preference
        android:selectable="false"
        android:summary="@string/settings_information_license_summary"
        android:title="@string/settings_information_license_title" />

    <Preference
        android:key="feedback"
        android:summary="@string/settings_information_feedback_summary"
        android:title="@string/settings_information_feedback_title" />


</PreferenceScreen>