<menu 
    xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<group android:id="@+id/word_group">
    
		<item android:id="@+id/word_add"
			android:title="@string/word_activity_menu_add"
	        android:icon="@drawable/ic_action_add_to_queue_holo_dark"
	        android:showAsAction="always" />

        <item
            android:id="@+id/word_addon"
            android:actionProviderClass="de.pecheur.colorbox.detail.AddonActionProvider"
            android:showAsAction="always"
            android:icon="@drawable/ic_action_download_holo_dark"
            android:title="@string/word_activity_menu_addon"/>
		
		<item android:id="@+id/word_search"
			android:icon="@drawable/ic_action_search_holo_dark"
	        android:title="@string/word_activity_menu_search"
	        android:showAsAction="ifRoom|collapseActionView"
	        android:actionViewClass="android.widget.SearchView" />	
		
		<item android:id="@+id/word_query"
		    android:showAsAction="always"
		    android:title="@string/word_activity_menu_query"
	      	android:icon="@drawable/ic_action_slideshow_holo_dark" />
		
		<item android:id="@+id/unit_edit"
			android:title="@string/word_activity_menu_edit"
			android:showAsAction="never" />
		
		<item android:id="@+id/word_shortcut"
		    android:title="@string/word_activity_menu_shortcut"
		    android:showAsAction="never" />

        <item android:id="@+id/word_share"
            android:title="@string/word_activity_menu_share"
            android:showAsAction="never"/>

 	</group>
</menu>
