<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            style="@style/HeaderTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_editor_title_header" >
        </TextView>

        <EditText
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_toLeftOf="@+id/color"
            android:ems="10"
            android:hint="@string/unit_editor_title_hint"
            android:imeOptions="flagNoExtractUi"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            style="@style/HeaderTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/unit_editor_language_header" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp" >

            <Spinner
                android:id="@+id/a_language"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/b_language"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/delete"
            android:visibility="invisible"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/unit_editor_delete"/>

    </LinearLayout>

</ScrollView>